# trst

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/ui/: main_menu.rs  mod.rs  preferences.rs
trster/: Cargo.toml
trster/src/: main.rs
trster/src/testing/: executor.rs  mod.rs  test_unit.rs
types/: Cargo.toml
types/src/: lib.rs
