[package]
name = "trst_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced", rev = "77c8380"}
iced_native ={ git = "https://github.com/iced-rs/iced", rev = "77c8380" }
trst_types = { path="../types" }