[package]
name = "trst_trster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.13", features = ["derive"]}
ron = "0.8"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.0.2", features = ["alloc"]}
trst_types = { path="../types" }
tempfile = "3.3.0"
once_cell = "1.15.0"

log = "0.4.17"
pretty_env_logger = "0.4.0"